force-app/main/default/objects/Transaction__c/fields/Narrative__c.field-meta.xml
<CustomField>
    <fullName>Narrative__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>