force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Narrative__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>